--- a/css/styles.css
+++ b/css/styles.css
@@ -110,12 +110,23 @@ body {
   letter-spacing: 0.02em;
   color: var(--first-text-color);
   transition: color 300ms linear;
+  position: relative;
 }
 .header-link:hover,
 .header-link:focus {
   color: var(--accent-color);
 }
+.header-link.current::after {
+  content: '';
+  width: 100%;
+  height: 4px;
+  background-color: var(--accent-color);
+  border-radius: 2px;
+  left: 0;
+  bottom: 0;
+  position: absolute;
 
+}
 .header-link-style {
   font-weight: 500;
   font-size: 14px;
@@ -381,10 +392,34 @@ body {
 /*-------Портфолио-------*/
 
 .portfolio {
-  background-color: #ffffff;
+  background-color: var(--hero-color);
 }
 .portfolio-item {
-  background-color: #ffffff;
+  background-color: var(--hero-color);
+}
+.portfolio-item:hover .portfolio-card-text {
+  transform: translateY(0);
+}
+.cadr-overflow {
+  position: relative;
+  overflow: hidden;
+}
+.portfolio-card-text {
+  position: absolute;
+  font-style: normal;
+  font-weight: normal;
+  top: 0;
+  left: 0;
+  font-size: 18px;
+  line-height: 1.56;
+  letter-spacing: 0.03em;
+  padding: 63px 24px;
+  text-align: left;
+  background-color: rgba(33, 150, 243, 0.9);;
+  color: var(--third-text-color);
+  transform: translateY(100%);
+  transition: transform 300ms;
+  overflow: auto;
 }
 .card-body {
   padding-top: 30px;
