--- a/css/styles.css
+++ b/css/styles.css
@@ -580,8 +580,50 @@ body {
 }
 .footer-icons {
   fill: var(--third-text-color);
-  color: #ffffff;
+  color: var(--hero-color);
 }
 .footer-item:not(:last-child) {
   margin-bottom: 9px;
+}
+
+.backdrop {
+  width: 100vw;
+  height: 100vh;
+  background-color: rgba(0, 0, 0, 0.2);
+  position: fixed;
+  top: 0;
+  left: 0;
+  transition: opacity 300ms, isibility 300ms;
+}
+.backdrop.is-hidden .modal {
+  transform: 
+}
+.modal {
+  width: 500px;
+  min-height: 500px;
+  background-color: var(--hero-color);
+  border-radius: 5px;
+  position: absolute;
+  top: 50%;
+  left: 50%;
+  transform: translate(-50%, -50%);
+  transition: transform 300px;
+}
+.modal-close {
+  position: absolute;
+  top: 10px;
+  right: 10px;
+  width: 30px;
+  height: 30px;
+  background-color: transparent;
+  border: 1px solid rgba(0, 0, 0, 0.1);
+  border-radius: 50%;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+}
+.is-hidden {
+  visibility: hidden;
+  opacity: 0;
+  pointer-events: none;
 }
