--- a/css/styles.css
+++ b/css/styles.css
@@ -613,7 +613,7 @@ body {
   top: 50%;
   left: 50%;
   transform: translate(-50%, -50%)  scale(1);
-  transition: transform 500px;
+  transition: transform 500ms;
 }
 .modal-close {
   position: absolute;
@@ -627,13 +627,13 @@ body {
   display: flex;
   align-items: center;
   justify-content: center;
-}
-.close-icon {
   fill: var(--first-logo-color);
 }
-.close-icon:hover 
-.close-icon:focus {
-fill: var(--accent-color);
+.close-icon {
+}
+.modal-close:hover,
+.modal-close:focus {
+  fill: var(--accent-color);
 }
 .is-hidden {
   visibility: hidden;
