--- a/css/styles.css
+++ b/css/styles.css
@@ -595,13 +595,14 @@ body {
   top: 0;
   left: 0;
   opacity: 1;
-  transition: opacity 500ms;
+  visibility: visible;
+  transition: visibility 500ms;
 }
 .backdrop.is-hidden {
   visibility: hidden;
   pointer-events: none;
 }
-.backdrop.is-hidden .modal {
+.modal.is-hidden {
   transform: translate(-50%, -50%) scale(1.1);
 }
 .modal {
@@ -612,7 +613,7 @@ body {
   position: absolute;
   top: 50%;
   left: 50%;
-  transform: translate(-50%, -50%)  scale(1);
+  transform: translate(-50%, -50%) scale(1);
   transition: transform 500ms;
 }
 .modal-close {
@@ -628,15 +629,11 @@ body {
   align-items: center;
   justify-content: center;
   fill: var(--first-logo-color);
-}
+  }
 .close-icon {
 }
 .modal-close:hover,
 .modal-close:focus {
   fill: var(--accent-color);
 }
-.is-hidden {
-  visibility: hidden;
-  opacity: 0;
-  pointer-events: none;
-}
+
